--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>java-common-util</groupId>
-    <artifactId>java-common-util</artifactId>
+    <groupId>my-java-project</groupId>
+    <artifactId>my-java-project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -253,7 +253,7 @@
     </dependencies>
 
     <build>
-        <finalName>java-common-util</finalName>
+        <finalName>my-java-project</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
