--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,27 @@
             <version>20.0</version>
         </dependency>
 
+        <!-- javatuples - 提供支持返回多个元素的一些类。 -->
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- joda - Java8 之前最优雅的 Java 时间库。-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.6</version>
+        </dependency>
+
+        <!-- okhttp - HttpClient 的一个成熟的替代品！-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
         <!-- netty3 -->
         <!--<dependency>
             <groupId>io.netty</groupId>
