解决大数相加求平均溢出的问题 i++和++i性能对比

--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,15 @@
 
         <!-- 好用的第三方工具包-->
         <!-- guava-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>20.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
         </dependency>
 
         <!-- javatuples - 提供支持返回多个元素的一些类。 -->
