--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 
     <!-- 依赖的jar包 -->
     <dependencies>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.2.2.21</version>
+        </dependency>
 
         <!-- redis client-->
         <dependency>
