ThreadLocal 强引用 软引用 弱引用 虚引用

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,8 @@ log4j.appender.STDOUT = org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.Target = System.out
 log4j.appender.STDOUT.layout = org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.Threshold = ${log.level} 
-#log4j.appender.STDOUT.layout.ConversionPattern =[%d{yyyy-MM-dd HH\:mm\:ss.SSS Z}][%X{serverHostName}][%X{serverIp}][%p][%c{1}][%t](%C{1}\:%L) - %m%n
-log4j.appender.STDOUT.layout.ConversionPattern =  %d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern =[%d{yyyy-MM-dd HH\:mm\:ss.SSS Z}][%X{serverHostName}][%X{serverIp}][%p][%c{1}][%t](%C{1}\:%L) - %m%n
+#log4j.appender.STDOUT.layout.ConversionPattern =  %d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.appender.ERROR=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ERROR.Threshold=error
